# School

./: .gitignore
archive/de-anza/fall-2023/data-abstraction/monster-library/: CMakeLists.txt  main.cpp
archive/de-anza/fall-2023/data-abstraction/monster-library/Monster/: Monster.cpp  Monster.h  MonsterBuilder.cpp  MonsterBuilder.h
child-development/: Activity 1.odt  Interview Write Up.odt  Letter to Parent-to-be.odt  Race for Life Discussion.odt  activity-2.odt  connor-petri-midterm.odt  physical-development-discussion.odt  safety-tips-activity.odt  temperament-discussion.odt
child-development/notes/: Chapter-1  Chapter-1.odt  Chapter-2.odt  Chapter-3.odt
creative-minds/: .~lock.Dicussion Forum 1.odt#  Discussion Forum 1.odt  Discussion Forum 2.odt  Discussion Forum 3.odt  Discussion Forum 4.odt  Video Assignment 1.odt  creativity-in-everyday-life.odt  discussion-forum-2.odt  discussion-forum-5.odt  discussion-forum-6.odt
discrete-math/: discrete-math.tex  test-1-notes.tex  test-2-notes.tex
discrete-math/chapter-1/: 3-relations-and-functions.tex
discrete-math/chapter-4/: 1-direct-proof-and-counterexample-1.tex  1-direct-proof-and-counterexample.tex  3-rational-numbers.tex  4-divisibility.tex  5-quotient-remainder-theorem.tex  7-contradiction-and-contraposition.tex
discrete-math/chapter-5/: 1-sequences.tex  2-proving-formulas.tex  3-mathematical-induction.tex  4-strong-methematical-induction.tex  6-recursive-definition-of-sequence.tex  7-iteration.tex
discrete-math/chapter-6/: 1-set-theory.tex
discrete-math/chapter-7/: 2-function-types.tex  (+3 more)
(+212 files in other folders)
